add test.launch, add camera internal parameter

--- a/pointgrey_camera_driver/cfg/PointGrey.cfg
+++ b/pointgrey_camera_driver/cfg/PointGrey.cfg
@@ -188,5 +188,20 @@ gen.add("strobe2_delay", double_t, SensorLevels.RECONFIGURE_RUNNING, "The delay 
 
 gen.add("strobe2_duration", double_t, SensorLevels.RECONFIGURE_RUNNING, "Strobe duration (in milliseconds)", 0.0, 0.0, 1000.0)
 
+# image resize rate
+gen.add("use_scale",              bool_t, SensorLevels.RECONFIGURE_RUNNING,     "Whether you use image resize ratio or not.",				             		             True)
+
+gen.add("scale_width",              double_t, SensorLevels.RECONFIGURE_RUNNING,     "Image width resize rate.",				             		             1.0, 0.0, 10.0)
+
+gen.add("scale_height",              double_t, SensorLevels.RECONFIGURE_RUNNING,     "Image height resize rate.",				             		             1.0, 0.0, 10.0)
+
+interpolation_method = gen.enum([gen.const("nn", int_t, 0, "nearest_neighbor"),
+                    gen.const("linear", int_t, 1, "linear"),
+                    gen.const("area", int_t, 2, "resampling area"),
+                    gen.const("cubic", int_t, 3, "bicubic"),
+                    gen.const("lanczos4", int_t, 4, "lanczos")],
+                    "resize interpolation method")
+
+gen.add("interpolation", str_t, SensorLevels.RECONFIGURE_RUNNING, "Resize interpolation method",                                                                                   "linear",     edit_method = interpolation_method)
 
 exit(gen.generate(PACKAGE, "pointgrey_camera_driver", "PointGrey"))
