--- a/pointgrey_camera_driver/CMakeLists.txt
+++ b/pointgrey_camera_driver/CMakeLists.txt
@@ -86,17 +86,16 @@ catkin_package(CATKIN_DEPENDS
 # find_package(PkgConfig REQUIRED)
 # pkg_check_modules(OpenCV opencv-3.3.1-dev REQUIRED)
 #}}}
-# find_package(OpenCV REQUIRED)
-# message("${OpenCV_INCLUDE_DIRS}")
-# message("${OpenCV_LIBRARIES}")
-
 find_package(OpenCV REQUIRED)
 message("OpenCV VERSION: ${OpenCV_VERSION}")
 message("OpenCV Components: ${OpenCV_LIB_COMPONENTS}")
-
 find_package(Eigen3 REQUIRED)
 
-include_directories(include /usr/include/spinnaker ${catkin_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake")
+find_package(Spinnaker REQUIRED)
+
+include_directories(include ${SPINNAKER_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
 add_library(PointGreyCameraSP src/PointGreyCameraSP.cpp)
 target_link_libraries(PointGreyCameraSP Spinnaker ${catkin_LIBRARIES})
 add_dependencies(PointGreyCameraSP ${PROJECT_NAME}_gencfg)
